Increased text-shadow for readability; removed text shadow in grid mode; corrected line height on buttons

--- a/CapturingTheMoment/thankYou.css
+++ b/CapturingTheMoment/thankYou.css
@@ -39,7 +39,7 @@ h1 {
 	color:#fff;
 	padding: .25em;
 	margin:0;
-	text-shadow: 0px 0px 4em #555;
+	text-shadow: 0px 0px 2em #555;
 }
 h1 img {
 	height:1em;
@@ -89,6 +89,7 @@ header.grid h1 {
 	line-height: 2em;
     padding-top: 0;
     padding-bottom: 0;
+    text-shadow: none;
 }
 header.grid h1:before {
 	background-image:url('images/beepi_iso_blue.png');
@@ -141,6 +142,7 @@ header.grid h1 span {
 	text-align:center;
 	text-transform: uppercase;
 	font-weight:400;
+	line-height: 1em;
 }
 #seeSmiles,
 #play {
